load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_apko//apko:defs.bzl", "apko_image")

# https://edu.chainguard.dev/open-source/build-tools/apko/bazel-rules/
# https://github.com/chainguard-dev/rules_apko/blob/main/examples/wolfi-base/BUILD.bazel
# https://github.com/chainguard-dev/rules_apko/blob/main/examples/multi_arch_and_repo/BUILD.bazel
apko_image(
    name = "base_image",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    config = "apko.yaml",
    # See MODULE.bazel for how apko.lock.json is translated to @base_image//:contents
    contents = "@base_image//:contents",
    tag = "base_image:latest",
    visibility = ["//visibility:public"],
)

build_test(
    name = "test",
    tags = ["unit-test"],
    targets = [":base_image"],
)
